# DocuMind-Enterprise-Document-Intelligence-System-RAG

./: README.md  app.py  pyproject.toml  requirements.txt
config/: config.yaml
src/: document_processor.py  llm_handler.py  retriever.py  vector_store.py
tests/: questions.txt
